# doodle

./: .gitignore  Cargo.toml  DESIGN.md  Daedalus.md  HELPERS.md  MakeWaldo.hs  README.md  RECORDS.md  TYPECHECKER.md  codegen_tests.rs  foobarbaz.rs  mixed.utf8  sample_codegen.rs  test.elf  test.heic  test.peano  test.tar  test.tgz  test.txt  test.utf8  test.waldo  test0.rle  test1.numbers  test1.rle  utf8reader.rs
.cargo/: config.toml
.github/workflows/: ci.yml
custom/: MakeNumbers.hs  MakeRLE.hs  Makefile  elf.c
doc/: APM.md  DESIGN.md  Features.md  HIERONYMS.md  NITPICKS.md  TODO.md
doodle-formats/: Cargo.toml
doodle-formats/benches/: cgrun_benchmark.rs  inflate_bench.rs
doodle-formats/src/: format.rs  main.rs
doodle-formats/src/format/: base.rs  binary_strings.rs  deflate.rs  elf.rs  gif.rs  gzip.rs  jpeg.rs  mpeg4.rs  numbers.rs  opentype.rs  peano.rs  png.rs  riff.rs  run_length.rs  tar.rs  text.rs  tiff.rs  waldo.rs  zlib.rs
doodle-formats/src/format/opentype/: avar.rs  base.rs  cmap.rs  colr.rs  common.rs  cpal.rs  cvt.rs  dsig.rs  fpgm.rs  fvar.rs  gasp.rs  gdef.rs  glyf.rs  gpos.rs  gsub.rs  gvar.rs  hdmx.rs  head.rs  hhea.rs  hmtx.rs  hvar.rs  kern.rs  layout.rs  loca.rs  maxp.rs  mvar.rs  name.rs  os2.rs  post.rs  stat.rs  svg.rs  var_common.rs  vdmx.rs  vhea.rs  vmtx.rs
doodle_num/: Cargo.toml
doodle_num/src/: codegen.rs  core.rs  elaborator.rs  lib.rs  printer.rs
experiments/analytic-engine/: Cargo.toml
experiments/analytic-parser/: Cargo.toml
experiments/doodle-pdf/: Cargo.toml
experiments/doodle-rec/: Cargo.toml  test2.json
frontend/: .gitignore  app.js  display.js  dom.js  index.html  semantics.js  style.css
micro-stat/: Cargo.toml
micro-stat/src/: api_helper.rs  gencode_stat.rs  ideal_stat.rs  main.rs
smallsorts/: Cargo.toml
smallsorts/src/: binary.rs  lib.rs  tag.rs
src/: alt.rs  base.rs  bit_set.rs  bounds.rs  byte_set.rs  codegen.rs  decoder.rs  dep_ref.rs  disjoint.rs  error.rs  etc.rs  extension.rs  format.rs  helper.rs  lib.rs  loc_decoder.rs  main.rs  marker.rs  output.rs  pattern.rs  precedence.rs  prelude.rs  read.rs  record_fmt.rs  scope.rs  streamer.rs  typecheck.rs  typed.rs  util.rs  validation.rs  valuetype.rs
src/alt/: helper.rs  prelude.rs
src/byte_set/: pretty_print.rs
src/codegen/: catalog.rs  ixlabel.rs  mod.rs  model.rs  name.rs  path_names.rs  rust_ast.rs  trace.rs  typed_decoder.rs  typed_format.rs  util.rs
src/decoder/: search.rs  seq_kind.rs  value.rs
src/numeric/: core.rs  (+6 more)
test-fonts/: Frankenpax.ttc
test-images/: CMYK-Euro.tif  CMYK-USNews.tif  RGB-Adobe.tif  RGB-Wide.tif  banner_cdu.tif  binocs.tif  bitmap.tif  cmyk-cover.tif  cmyk-scribus.tif  cmyk-two.tif  cmyk16.tif  frog-alpha.tif  frog-deflate.tif  frog-gray.tif  frog-index.tif  frog-jpeg.tif  frog-lzw.tif  frog-none.tif  frog-pack.tif  grey16a.tif  grey16white.tif  grey8a.tif  landscape-orient-1.tif  landscape-orient-2.tif  landscape-orient-3.tif  landscape-orient-4.tif  landscape-orient-5.tif  landscape-orient-6.tif  landscape-orient-7.tif  landscape-orient-8.tif  scmyk-swop.tif
tests/: decode.rs  prelude_integration.rs
(+70 files in other folders)
