[package]
name = "doodle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[test]]
name = "generated"
path = "sample_codegen.rs"
bench = false


[dev-dependencies]
proptest = "1.1.0"
expect-test = "1.4"

[dependencies]
clap = { version ="4.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
