[workspace]
members = [".", "generated/", "doodle-formats/", "micro-stat/", "smallsorts"]

[package]
name = "doodle"
version = "0.1.0"
edition = "2021"

[features]
parser_from_read_ctxt = []

[[bin]]
name = "doodle"
path = "doodle-formats/src/main.rs"
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
proptest = "1.1.0"
expect-test = "1.4"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.2", features = ["derive"] }
num-traits = "0.2"
rustc-hash = "2.1.1"
cons-rs = "0.7.3"
smallsorts = { path = "smallsorts/", version = "0.1.0" }
