[package]
name = "doodle-formats"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
bench = false

[dependencies]
doodle = { path = "../", version = "0.1.0" }
clap = { version = "4.2", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
