[package]
name = "doodle-formats"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
bench = false

[[bench]]
name = "decoder_inflate_bench"
path = "benches/inflate_bench.rs"
harness = false

[[bench]]
name = "cgrun_benchmark"
path = "benches/cgrun_benchmark.rs"
harness = false

[dev-dependencies]
criterion = "0.5"

[dependencies]
doodle = { path = "../", version = "0.1.0" }
clap = { version = "4.2", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
